--- a/.classpath
+++ b/.classpath
@@ -21,5 +21,7 @@
 	<classpathentry kind="var" path="M2_REPO/org/xhtmlrenderer/flying-saucer-pdf-itext5/9.0.3-RC1/flying-saucer-pdf-itext5-9.0.3-RC1.jar"/>
 	<classpathentry kind="var" path="M2_REPO/com/itextpdf/itextpdf/5.4.4/itextpdf-5.4.4.jar"/>
 	<classpathentry kind="var" path="M2_REPO/com/itextpdf/itext-asian/5.2.0/itext-asian-5.2.0.jar"/>
+    <classpathentry kind="var" path="M2_REPO/de/sciss/weblaf-core/1.28/weblaf-core-1.28.jar"/>
+    <classpathentry kind="var" path="M2_REPO/de/sciss/weblaf-ui/1.28/weblaf-ui-1.28.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
