解决slf4j绑定冲突 修改浏览器标识为pc，iphone，android ，uc四类 完成设置界面 添加状态栏 添加资源目录resources，icons，添加加载资源方法

--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,12 @@
 			<groupId>de.sciss</groupId>
 			<artifactId>weblaf-core</artifactId>
 			<version>1.28</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.slf4j</groupId>
+					<artifactId>slf4j-simple</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>de.sciss</groupId>
