彻底解决切换外观，标题栏不显示的问题 使用httpclient代替单纯使用jsoup获取页面，可以设置重试机制 链接中页码转义字符由%d换为%s，链接中可能含有%dx 添加图标

--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>io.github.howiefh</groupId>
     <artifactId>articles-exporter</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.1</version>
     <packaging>jar</packaging>
 
     <name>articles-exporter</name>
